--- a/ci-cd/.github/workflows/terraform.yml
+++ b/ci-cd/.github/workflows/terraform.yml
@@ -57,19 +57,19 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init ./${{ var.ENV }}
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate ./${{ var.ENV }}
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false ./${{ var.ENV }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+      run: terraform apply -auto-approve -input=false ./${{ var.ENV }}
   
   DeployStaging:
     name: 'Deploy to Staging'
@@ -99,19 +99,19 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init ./${{ var.ENV }}
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate ./${{ var.ENV }}
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false ./${{ var.ENV }}
 
    # - name: Terraform Apply
     #  if: github.ref == 'refs/heads/"main"'
-     # run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+     # run: terraform apply -auto-approve -input=false ./${{ var.ENV }}
   
 
   
@@ -145,15 +145,15 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init ./${{ var.ENV }}
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate ./${{ var.ENV }}
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false ./${{ var.ENV }}
 
     # On push to "main", approval will be required
     - id: list-maintainers
@@ -169,7 +169,7 @@ jobs:
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"'
-      run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+      run: terraform apply -auto-approve -input=false ./${{ var.ENV }}
       
 
       
