editting terraform.yml file

--- a/ci-cd/.github/workflows/terraform-destroy.yml
+++ b/ci-cd/.github/workflows/terraform-destroy.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2           
+        aws-region: us-east-1           
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
@@ -41,7 +41,7 @@ jobs:
             echo "ENV=production" >> $GITHUB_ENV
           
           else
-            echo "ENV=test" >> $GITHUB_ENV
+            echo "ENV=sandbox" >> $GITHUB_ENV
           fi
    
       
