--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,12 @@
 name: Terraform
 on:
-  #push:
-   # branches:
-    #  - "**"
-  #pull_request:
-   # branches:
-    #  - "**"
+  push:
+    branches:
+      - main
+      - "**"
+  pull_request:
+    branches:
+      - "**"
   workflow_dispatch:
     branches:
       - "**"
