--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,6 +38,7 @@ jobs:
       name: sandbox
     defaults:
       run:
+        working-directory: ${{ env.tf_actions_working_dir }}
         shell: bash
 
     steps:
@@ -58,19 +59,19 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init 
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate 
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false 
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+      run: terraform apply -auto-approve -input=false 
   
   DeployStaging:
     name: 'Deploy to Staging'
@@ -80,6 +81,7 @@ jobs:
       name: staging
     defaults:
       run:
+        working-directory: ${{ env.tf_actions_working_dir }}
         shell: bash
 
     steps:
@@ -100,19 +102,19 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate 
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false 
 
    # - name: Terraform Apply
     #  if: github.ref == 'refs/heads/"main"'
-     # run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+     # run: terraform apply -auto-approve -input=false 
   
 
   
@@ -126,6 +128,7 @@ jobs:
       name: production
     defaults:
       run:
+        working-directory: ${{ env.tf_actions_working_dir }}
         shell: bash
 
     steps:
@@ -146,15 +149,15 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./${{ env.ENV }}
+      run: terraform init 
 
     - name: Validate Terraform configuration
-      run: terraform validate ./${{ env.ENV }}
+      run: terraform validate 
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./${{ env.ENV }}
+      run: terraform plan -input=false 
 
     # On push to "main", approval will be required
     - id: list-maintainers
@@ -170,7 +173,7 @@ jobs:
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
       #if: github.ref == 'refs/heads/"main"'
-      run: terraform apply -auto-approve -input=false ./${{ env.ENV }}
+      run: terraform apply -auto-approve -input=false 
       
 
       
