Update terraform.yml still work_dir

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,7 +39,6 @@ jobs:
       name: sandbox
     defaults:
       run:
-        working-directory: ${{ env.tf_actions_working_dir }}
         shell: bash
 
     steps:
@@ -60,19 +59,19 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init 
+      run: terraform init ${{ env.tf_actions_working_dir }}
 
     - name: Validate Terraform configuration
-      run: terraform validate 
+      run: terraform validate ${{ env.tf_actions_working_dir }}
   
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false 
+      run: terraform plan -input=false ${{ env.tf_actions_working_dir }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false 
+      run: terraform apply -auto-approve -input=false ${{ env.tf_actions_working_dir }}
   
   DeployStaging:
     name: 'Deploy to Staging'
