adding main.tf to each environment

--- a/ci-cd/.github/workflows/terraform.yml
+++ b/ci-cd/.github/workflows/terraform.yml
@@ -1,11 +1,11 @@
 name: Terraform
 on:
-  #push:
-   # branches:
-    #  - "**"
-  #pull_request:
-   # branches:
-    #  - "**"
+  push:
+    branches:
+      - "**"
+  pull_request:
+    branches:
+      - "**"
   workflow_dispatch:
     branches:
       - "**"
