Update terraform.yml hardcoding env

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,22 +59,25 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ${{ env.tf_actions_working_dir }}
+      run: terraform init ../../environments/sandbox
+
 
     - name: Validate Terraform configuration
-      run: terraform validate ${{ env.tf_actions_working_dir }}
+      run: terraform validate ../../environments/sandbox
+
       
     - name: List Files
-      run: ls -la ${{ env.tf_actions_working_dir }}
+      run: ls -la ../../environments/sandbox
+
         # working-directory: ./terraform  # Match this to your intended directory
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ${{ env.tf_actions_working_dir }}
+      run: terraform plan -input=false ../../environments/sandbox
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false ${{ env.tf_actions_working_dir }}
+      run: terraform apply -auto-approve -input=false ../../environments/sandbox
   
   DeployStaging:
     name: 'Deploy to Staging'
