--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,25 +59,25 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init ./environments/sandbox
+      run: terraform init -chdir=./environments/sandbox
 
 
     - name: Validate Terraform configuration
-      run: terraform validate ./environments/sandbox
+      run: terraform validate -chdir=./environments/sandbox
 
       
     - name: List Files
-      run: ls -la ../../environments/sandbox
+      run: ls -la -chdir=./environments/sandbox
 
         # working-directory: ./terraform  # Match this to your intended directory
     
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false ./environments/sandbox
+      run: terraform plan -input=false -chdir=./environments/sandbox
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false ./environments/sandbox
+      run: terraform apply -auto-approve -input=false -chdir=./environments/sandbox
   
   DeployStaging:
     name: 'Deploy to Staging'
