--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,10 @@ jobs:
       
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init 
-      run: terraform init -chdir=./environments/sandbox
+      run: |
+        cd ./environments/sandbox
+        terraform init 
+      #run: terraform init -chdir=./environments/sandbox
 
 
     - name: Validate Terraform configuration
